opam-version: "2.0"
name: "distributed-lwt"
version: "0.2.0"
maintainer: "essdotteedot <essdotteedot@gmail.com>"
authors: [ "essdotteedot <essdotteedot@gmail.com>" ]
license: "MIT"
homepage: "https://github.com/essdotteedot/distributed"
dev-repo: "https://github.com/essdotteedot/distributed.git"
bug-reports: "https://github.com/essdotteedot/distributed/issues"
doc: "https://essdotteedot.github.io/distributed/"

build: [
  ["dune" "subst" "-n" name] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune"  {build & >= "1.11.0"}
  "distributed" {>= "0.6.0"}
  "logs"
  "lwt" {>= "3.2.0"}       
  "ocaml" {>= "4.02.3"}
]

