opam-version: "2.0"
name: "distributed"
version: "0.6.0"
maintainer: "essdotteedot <essdotteedot@gmail.com>"
authors: [ "essdotteedot <essdotteedot@gmail.com>" ]
license: "MIT"
homepage: "https://github.com/essdotteedot/distributed"
dev-repo: "https://github.com/essdotteedot/distributed.git"
bug-reports: "https://github.com/essdotteedot/distributed/issues"
doc: "https://essdotteedot.github.io/distributed/"

build: [
  ["dune" "subst" "-n" name] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build & >= "1.11.0"}
  "base-unix"  
  "bisect_ppx"
  "ocaml" {>= "4.02.3"}
]

