opam-version: "2.0"
name: "distributed"
version: "0.6.0"
maintainer: "essdotteedot <essdotteedot@gmail.com>"
authors: [ "essdotteedot <essdotteedot@gmail.com>" ]
license: "MIT"
homepage: "https://github.com/essdotteedot/distributed"
dev-repo: "git+https://github.com/essdotteedot/distributed.git"
bug-reports: "https://github.com/essdotteedot/distributed/issues"
doc: "https://essdotteedot.github.io/distributed/"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build & >= "1.11.0"}
  "base-unix"  
  "bisect_ppx"
  "ocaml" {>= "4.02.3"}
]

synopsis: "Library to provide Erlang style distributed computations. This library is inspired by Cloud Haskell"

description: """
Primitive for spawning processes (in the Erlang sense) either remotely or locally, monitoring/unmonitoring spawned processes, sending, 
receiving, broadcasting messages to those processes. Unlike Erlang, the messages that are sent between processes are typed.
"""